--- a/_posts/2016-06-03-secret.markdown
+++ b/_posts/2016-06-03-secret.markdown
@@ -82,7 +82,7 @@ This opens up a much neater approach. Since any query on the *class* `JobAccess`
 
 <a name="tl-dr-secret"></a>
 
-```ruby active_record_extension.rb
+```ruby
 module ActiveRecordExtension
   module Base
     def activate_secret_extensions
@@ -104,7 +104,7 @@ So now,
 
  Here's my current list of secretly-accepted extensions
 
-```ruby active_record_extension.rb
+```ruby
 module ActiveRecordExtension
   module SecretExtension
     def bulk_insert_sql(attribute_array)
