--- a/_posts/2016-06-03-secret.markdown
+++ b/_posts/2016-06-03-secret.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "secret"
 date: 2016-06-03 09:15:10 -0400
 comments: true
-categories: 
+tags: [Rails]
 ---
 
 ## Add features to a core class (ActiveRecord) without really adding them
@@ -96,7 +96,7 @@ end
 ActiveRecord::Base.extend(ActiveRecordExtension::Base)
 ```
 
-So now, 
+So now,
 
  * All of `ActiveRecord::Base` has access to the method `activate_secret_extensions`
  * Calling `activate_secret_extensions` adds any methods defined in `ActiveRecordExtension::Base`, which is pasted below for reference.
