--- a/_posts/2016-06-03-secret.markdown
+++ b/_posts/2016-06-03-secret.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: "secret"
+description: "Modify a core class ... secretly"
 date: 2016-06-03 09:15:10 -0400
 comments: true
-tags: [Rails]
+tags: [Rails, Ruby]
 ---
 
 ## Add features to a core class (ActiveRecord) without really adding them
