--- a/_posts/2016-04-09-left-join.markdown
+++ b/_posts/2016-04-09-left-join.markdown
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: "left_join"
+description: "Perform LEFT OUTER JOIN using Arel in Rail 4"
 date: 2016-04-09 16:58:25 -0400
 comments: true
-tags: [Rails]
+tags: [Rails, Arel, ActiveRecord]
 ---
 
 ## Add a simple left_join method to ActiveRecord
