fix: Spell Salt-N-Pepa correctly

--- a/_posts/2019-04-20-pushit.md
+++ b/_posts/2019-04-20-pushit.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 title: "Push It"
-description: "A Git shim feat. Salt N Peppa"
+description: "A Git shim feat. Salt-N-Pepa"
 date: 2019-04-20 14:41:00 -0400
 comments: true
-tags: [Bash, Git, Salt N Peppa]
+tags: [Bash, Git, Salt-N-Pepa]
 ---
 
 After working with enough Python and Ruby projects and their respective environment / versioning system (rvm and pyenv, mainly), I finally figured to unlock the secret of the small, the powerful, shim. Shims are how rvm allows you to install multiple version of Ruby simultaneously, but use the right one when you type `ruby` from a given location. Similarly with pyenv and the `python` command.
@@ -15,7 +15,7 @@ In short, `ruby` is an executable that presumably lives somewhere on your `PATH`
 
 And that's the key to it. rvm creates a "shim" -- it puts another executable called `ruby` in a path location that's *in front* of where your system Ruby may live. That way, your shell finds the shim first. The shim reads whatever settings and files rvm is configured to read, then points you to the appropriate ruby version.
 
-Once I realized how simple yet powerful this concept was, I immediately needed to apply it to a previous toy I made: a script called "gitpush". This script would do the same thing a `git push`, but would play a clip of Salt N Peppa's "Push It" while doing so. I called it `gitpush` because I didn't at the time know how to hook into `git push`, and, besides, that felt a little too brazen. Too much stick, not enough speaking softly.
+Once I realized how simple yet powerful this concept was, I immediately needed to apply it to a previous toy I made: a script called "gitpush". This script would do the same thing a `git push`, but would play a clip of Salt-N-Pepa's "Push It" while doing so. I called it `gitpush` because I didn't at the time know how to hook into `git push`, and, besides, that felt a little too brazen. Too much stick, not enough speaking softly.
 
 But now we have the shim. Let's roll.
 
