Acknowledge git hook solution to pushit

--- a/_posts/2019-04-20-pushit.md
+++ b/_posts/2019-04-20-pushit.md
@@ -7,6 +7,10 @@ comments: true
 tags: [Bash, Git, Salt-N-Pepa]
 ---
 
+_**Preamble:** Why, yes, you'd be correct to point out that all of what follows could be done with a git hook. I wanted to explore shims._
+
+## Shims
+
 After working with enough Python and Ruby projects and their respective environment / versioning system (rvm and pyenv, mainly), I finally figured to unlock the secret of the small, the powerful, shim. Shims are how rvm allows you to install multiple version of Ruby simultaneously, but use the right one when you type `ruby` from a given location. Similarly with pyenv and the `python` command.
 
 What follows applies to a bash environment. If you're using Windows then I can't help you. If you have another shell such as zsh or fish, the same likely applies but I don't actually know.
