--- a/src/content/blog/2022-04-09-ruby-enum.md
+++ b/src/content/blog/2022-04-09-ruby-enum.md
@@ -11,7 +11,7 @@ As projects I'm working on continue to scale, we continue to look for more ways 
 
 A big one is how we deal with short lists of allowed values. In short, enums.
 
-Look, I'm not saying I commited this bug to production, but maybe that's exactly what I'm saying:
+Look, I'm not saying I committed this bug to production, but maybe that's exactly what I'm saying:
 
 ```rb
 env_match = ENV["RAILS_ENV"] == "propduction"
@@ -79,7 +79,7 @@ Typically, I'll implement the second requirement with an entirely separate class
 class Enum < Module
   attr_reader :values
 
-  def initailize(&blk)
+  def initialize(&blk)
     @values = Set.new
     instance_eval(&blk) # <--- this needs to store the values from each `value` call
   end
